fix(ui): pill descenders should not be clipped (#8868)

--- a/src/sentry/static/sentry/less/shared-components.less
+++ b/src/sentry/static/sentry/less/shared-components.less
@@ -1608,7 +1608,6 @@ ul.faces {
       max-width: 100%;
       .truncate;
       display: inline-block;
-      line-height: 1;
       vertical-align: text-bottom;
     }
 
@@ -1618,6 +1617,7 @@ ul.faces {
       display: inline;
       margin: 0 0 0 8px;
       color: @gray-light;
+      line-height: 1.2;
 
       &:hover {
         color: @gray;
